# DOTALYZER

./: .gitignore  docker-compose.yml
api/: .dockerignore  1142007226_recent_matches.csv  Dockerfile  pyproject.toml
api/src/: main.py
api/src/config/: server.py
api/src/controllers/: dotalyzer_controller.py
api/src/routes/: dotalyzer_route.py
api/src/services/: dotalyzer_service.py  recommender_service.py
api/src/utils/: data_pipeline.py
