[tool.poetry]
name = "dotalyzer"
version = "0.1.0"
description = ""
authors = ["MiguelT18 <miguel.teranj02@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.10.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
